--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -42,10 +42,10 @@
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
                             <div class="col-sm-4"><strong>SWAT model objectives:</strong></div>
-                            <div class="col-sm-8">{{ model_objective.get_swat_model_objectives }}</div>
                             {% if model_objective.other_objectives %}
-                                <div class="col-sm-4"><strong>SWAT model other objectives:</strong></div>
-                                <div class="col-sm-8">{{ model_objective.other_objectives }}</div>
+                                <div class="col-sm-8">{{ model_objective.get_swat_model_objectives }}, {{ model_objective.other_objectives }}</div>
+                            {% else %}
+                                <div class="col-sm-8">{{ model_objective.get_swat_model_objectives }}</div>
                             {% endif %}
                         </div>
                     <hr style="border:0">
@@ -63,36 +63,37 @@
                     {% endif %}
                 </div>
                 <div>
-                    {% if model_methods %}
-                        <h4><strong>Model Methods:</strong></h4>
+                    {% if model_method %}
+                        <h4><strong>Model Method:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            {% if model_methods.runoff_calculation_method %}
+                            {% if model_method.runoff_calculation_method %}
                                 <div class="col-sm-4"><strong>Runoff calculation method:</strong></div>
-                                <div class="col-sm-8">{{ model_methods.runoff_calculation_method }}</div>
+                                <div class="col-sm-8">{{ model_method.runoff_calculation_method }}</div>
                             {% endif %}
-                            {% if model_methods.flow_routing_method %}
+                            {% if model_method.flow_routing_method %}
                                 <div class="col-sm-4"><strong>Flow routing method:</strong></div>
-                                <div class="col-sm-8">{{ model_methods.flow_routing_method }}</div>
+                                <div class="col-sm-8">{{ model_method.flow_routing_method }}</div>
                             {% endif %}
-                            {% if model_methods.PET_estimation_method %}
+                            {% if model_method.PET_estimation_method %}
                                 <div class="col-sm-4"><strong>PET estimation method:</strong></div>
-                                <div class="col-sm-8">{{ model_methods.PET_estimation_method }}</div>
+                                <div class="col-sm-8">{{ model_method.PET_estimation_method }}</div>
                             {% endif %}
                         </div>
                     <hr style="border:0">
                     {% endif %}
                 </div>
                 <div>
-                    {% if swat_model_parameters %}
-                        <h4><strong>SWAT model used parameters:</strong></h4>
+                    {% if model_parameter %}
+                        <h4><strong>Model Parameter:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            <div class="col-sm-4"><strong>Model parameters:</strong></div>
-                            <div class="col-sm-8">{{ swat_model_parameters.get_swat_model_parameters }}, {{ swat_model_parameters.other_parameters }} </div>
-                            {% if swat_model_parameters.other_parameters %}
-                                <div class="col-sm-4"><strong>Other parameters:</strong></div>
-                                <div class="col-sm-8">{{ swat_model_parameters.other_parameters }}</div>
+                            <div class="col-sm-4"><strong>SWAT model used parameters:</strong></div>
+
+                            {% if model_parameter.other_parameters %}
+                                <div class="col-sm-8">{{ model_parameter.get_swat_model_parameters }}, {{ model_parameter.other_parameters }} </div>
+                            {% else %}
+                                <div class="col-sm-8">{{ model_parameter.get_swat_model_parameters }}</div>{#
                             {% endif %}
                         </div>
                     <hr style="border:0">
@@ -110,18 +111,24 @@
                             {% if model_input.rainfall_time_step_type %}
                                 <div class="col-sm-4"><strong>Rainfall time step type:</strong></div>
                                 <div class="col-sm-8">{{ model_input.rainfall_time_step_type }}</div>
+                            {% endif %}
+                            {% if model_input.rainfall_time_step_value %}
                                 <div class="col-sm-4"><strong>Rainfall time step value:</strong></div>
                                 <div class="col-sm-8">{{ model_input.rainfall_time_step_value }}</div>
                             {% endif %}
                             {% if model_input.routing_time_step_type %}
                                 <div class="col-sm-4"><strong>Routing time step type:</strong></div>
                                 <div class="col-sm-8">{{ model_input.routing_time_step_type }}</div>
+                            {% endif %}
+                            {% if model_input.routing_time_step_value %}
                                 <div class="col-sm-4"><strong>Routing time step value:</strong></div>
                                 <div class="col-sm-8">{{ model_input.routing_time_step_value }}</div>
                             {% endif %}
                             {% if model_input.simulation_time_step_type %}
                                 <div class="col-sm-4"><strong>Simulation time step type:</strong></div>
                                 <div class="col-sm-8">{{ model_input.simulation_time_step_type }}</div>
+                            {% endif %}
+                            {% if model_input.simulation_time_step_value %}
                                 <div class="col-sm-4"><strong>Simulation time step value:</strong></div>
                                 <div class="col-sm-8">{{ model_input.simulation_time_step_value }}</div>
                             {% endif %}
