--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1813,7 +1813,7 @@ td.user-actions > span:hover {
 }
 
 
-#access-table tr:last-child {
+.access-table tr:last-child {
     border-bottom: 1px solid #ddd;
 }
 
