--- a/hs_core/templates/pages/help.html
+++ b/hs_core/templates/pages/help.html
@@ -66,7 +66,7 @@
                             </div>
                             <div id="faq-cat-1-sub-3" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Hydroshare is currently in Beta Release 1.5.1 of development.
+                                    Hydroshare is currently in Release 1.5.2 of development.
                                 </div>
                             </div>
                         </div>
