--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -24,7 +24,7 @@
             {%  endif %}
         {% endblock %}
 
-            {# ======= Missing fields notification =======#}
+            {#  ======= Missing fields notification =======#}
             {% if not metadata_form and page.perms.change %}
                 {% if missing_metadata_elements or title|stringformat:"s" == "Untitled resource" %}
                     <div class="alert alert-success alert-dismissible" role="alert">
@@ -415,7 +415,7 @@
                         <div class="panel-body">
                             <div class="col-md-4">
                                 <div class="custom-well">
-                                    <h5 class="access-panel-title"><strong>Owners with full permissions to do anything on this resource</strong></h5>
+                                    <h5 class="access-panel-title"><strong>Users with full read/write permissions on this resource</strong></h5>
 
                                     <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
                                           method="POST">
@@ -758,14 +758,14 @@
                             {% endif %}
                         {% endif %}
                     {% endif %}
-{#                    {% if relevant_tools or metadata_form %}#}
-{#                        <li class="col-xs-2 col-md-2">#}
-{#                            <a href="#relevantTools" data-toggle="tab">#}
-{#                                <span class="glyphicon glyphicon-wrench"></span>#}
-{#                                &nbsp;Relevant Tools#}
-{#                            </a>#}
-{#                        </li>#}
-{#                    {% endif %}#}
+                    {% if relevant_tools or metadata_form %}
+                        <li class="col-xs-2 col-md-2">
+                            <a href="#relevantTools" data-toggle="tab">
+                                <span class="glyphicon glyphicon-wrench"></span>
+                                &nbsp;Relevant Tools
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
             <div class="tabs-body">
@@ -1398,27 +1398,24 @@
                     {%  endif %}
                 {%  endif %}
             {%  endif %}
-{#                <!-- ========= RELEVANT TOOLS TAB ========= -->#}
-{#            {% if relevant_tools or metadata_form %}#}
-{#                <div class="tab-pane" id="relevantTools">#}
-{#                {% if not metadata_form %}#}
-{#                    {% for tool in relevant_tools %}#}
-{#                        <h4>{{ tool.title }}</h4>#}
-{#                        <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch Tool</button></a>#}
-{#                        <hr>#}
-{#                    {% endfor %}#}
-{#                {% else %}#}
-{#                    ------- Relevant tools form here -------#}
-{#                {%  endif %}#}
-{#                </div>#}
-{#            {% endif %}#}
+                <!-- ========= RELEVANT TOOLS TAB ========= -->
+            {% if relevant_tools or metadata_form %}
+                <div class="tab-pane" id="relevantTools">
+                {% if not metadata_form %}
+                    {% for tool in relevant_tools %}
+                        <h4>{{ tool.title }}</h4>
+                        <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch Tool</button></a>
+                        <hr>
+                    {% endfor %}
+                {% else %}
+                    ------- Relevant tools form here -------
+                {%  endif %}
+                </div>
+            {% endif %}
             </div>
             </div>
             </div>
         <!-- ==== Tabs end ==== -->
-        <div class="rating">
-            {% rating_for cm %}
-        </div>
         {% comments_for cm %}
         {#                #}
         {# dialogs follow #}
@@ -2267,7 +2264,7 @@
             $alert_error = '<div class="alert alert-danger" id="error-alert"> \
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Error! </strong> \
-                Metadata failed to update.\
+                Metadata updated failed.\
             </div>'
             $form=$('#' + form_id);
             var datastring = $form.serialize();
