--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -510,9 +510,9 @@
                                                                     <span class="caret"></span>
                                                                 </span>
                                                                 <ul class="dropdown-menu" aria-labelledby="roles-menu">
-                                                                    <li><a href="#">Can view</a></li>
-                                                                    <li><a href="#">Can edit</a></li>
-                                                                    <li><a href="#"><b>Is owner</b></a></li>
+                                                                    <li><a>Can view</a></li>
+                                                                    <li><a>Can edit</a></li>
+                                                                    <li><a><b>Is owner</b></a></li>
                                                                 </ul>
                                                             </span>
                                                         </td>
@@ -525,7 +525,6 @@
                                                 <input name="t" value="owners" type="hidden"/>
                                                 </tbody>
                                             </table>
-                                            <button type="submit" style="display: none"></button>
                                         </form>
 
                                         {# Users who can edit the content of this resource #}
@@ -565,9 +564,9 @@
                                                                     <span class="caret"></span>
                                                                 </span>
                                                                 <ul class="dropdown-menu" aria-labelledby="roles-menu">
-                                                                    <li><a href="#">Can view</a></li>
-                                                                    <li><a href="#"><b>Can edit</b></a></li>
-                                                                    <li><a href="#">Is owner</a></li>
+                                                                    <li><a>Can view</a></li>
+                                                                    <li><a><b>Can edit</b></a></li>
+                                                                    <li><a>Is owner</a></li>
                                                                 </ul>
                                                             </span>
                                                         </td>
@@ -581,7 +580,7 @@
 
                                                 </tbody>
                                             </table>
-                                            <button type="submit" style="display: none"></button>
+                                            <button onclick="update_access_ajax_submit(); return false;" style="display: none"></button>
                                         </form>
 
                                         {# Users who can view the content of this resource #}
@@ -621,9 +620,9 @@
                                                                     </span>
                                                                     <ul class="dropdown-menu"
                                                                         aria-labelledby="roles-menu">
-                                                                        <li><a href="#">Can view</a></li>
-                                                                        <li><a href="#">Can edit</a></li>
-                                                                        <li><a href="#"><b>Is owner</b></a></li>
+                                                                        <li><a>Can view</a></li>
+                                                                        <li><a>Can edit</a></li>
+                                                                        <li><a><b>Is owner</b></a></li>
                                                                     </ul>
                                                                 </span>
                                                         </td>
@@ -635,7 +634,7 @@
                                                 <input name="t" value="view_users" type="hidden"/>
                                                 </tbody>
                                             </table>
-                                        <button type="submit" style="display: none"></button>
+                                        <button onclick="update_access_ajax_submit(); return false;" style="display: none"></button>
                                         </form>
                                     </div>
                                     <div class="custom-well">
@@ -664,7 +663,7 @@
                                                     </ul>
                                                 </div>
 
-                                                <button type="submit"
+                                                <button onclick="update_access_ajax_submit(); return false;"
                                                         class="btn btn-add-access btn-success pull-left glyphicon glyphicon-plus"><span
                                                         class="button-label">&nbspAdd</span></button>
 
@@ -2466,11 +2465,16 @@
             }
 
             function onRowRemove(event){
+                var formID = $(event.target).closest("form").attr("id");
                 var el = $(event.target);
                 var pk = el[0].getAttribute("data-pk");
                 el.closest("form").find("select option[value='" + pk + "']").removeAttr("selected");
                 el.closest("form").find("button[type='submit']").click();
                 el.closest("tr").remove();
+
+{#                var formID = $(event.target).closest("form").attr("id");#}
+
+                update_access_ajax_submit(event, formID);
             }
 
             function onRemoveKeyword(event) {
@@ -2524,17 +2528,49 @@
                 $("#id-subject").find("#id_value").val(keywords);
             }
 
+            function update_access_ajax_submit(e, formID){
+                $alert_success = '<div class="alert alert-success" id="success-alert"> \
+                <button type="button" class="close" data-dismiss="alert">x</button> \
+                <strong>Success! </strong> \
+                Access has been updated.\
+            </div>'
+                $alert_error = '<div class="alert alert-danger" id="error-alert"> \
+                <button type="button" class="close" data-dismiss="alert">x</button> \
+                <strong>Error! </strong> \
+                Access update failed.\
+            </div>'
+                console.log(formID);
+{#                $form = $("#" + formID);#}
+{#                var datastring = $form.serialize();#}
+{#                $.ajax({#}
+{#                    type: "POST",#}
+{#                    url: $form.attr('action'),#}
+{#                    dataType: 'html',#}
+{#                    data: datastring,#}
+{#                    success: function (result) {#}
+{#                        if (json_response.status === 'success') {#}
+{#                                console.log("Success!");#}
+{#                        }#}
+{#                    },#}
+{#                    error: function (XMLHttpRequest, textStatus, errorThrown) {#}
+{#                        console.log("Error!")#}
+{#                    }#}
+{#                });#}
+{#                //don't submit the form#}
+{#                return false;#}
+            }
+
             function metadata_update_ajax_submit(form_id) {
                 $alert_success = '<div class="alert alert-success" id="success-alert"> \
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Success! </strong> \
                 Metadata updated.\
-            </div>'
+            </div>';
                 $alert_error = '<div class="alert alert-danger" id="error-alert"> \
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Error! </strong> \
                 Metadata updated failed.\
-            </div>'
+            </div>';
                 $form = $('#' + form_id);
                 var datastring = $form.serialize();
                 $.ajax({
