[#399] add new block in genericresource.html, move the textarea code in the new block

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1416,6 +1416,11 @@
             </div>
             </div>
         <!-- ==== Tabs end ==== -->
+
+        {% block extra_section %} {# add extra section for resource landing page #}
+        {% endblock %}
+
+
         <div class="rating">
             {% rating_for cm %}
         </div>
