--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -130,18 +130,17 @@
                     {% endif %} {# variable section end #}
 
                 {%  endif %}{# extended meta section end #}
-
                 {# Add the view mode html code for resource extended meta tababove #}
                 </div>
             </div>
         </div>
+{%  endblock %}
 
 
+{#  Add the code of extended section on the landing page below #}
+{% block extra_section %}
 
-    {#  Add the code of extended section on the landing page below #}
-    {% block extended_section %}
-
-        {# Add netcdf tool button  #}
+    {# Add netcdf tool button  #}
 {#        {% for f in cm.files.all %}#}
 {#            {% if f.resource_file.name|slice:"-3:" == '.nc'%}#}
 {#                <td><a style="margin-left:15px" id="btn-netcdf-tools" type="button" class="btn btn-success" href="{% url "nc_tools:index" cm.short_id 'initial' %}">#}
@@ -151,22 +150,22 @@
 {#        {% endfor %}#}
 
 
-        {# Add ncdump section #}
-        {% if cm.files.all %}
-            {# tab body for ncdump #}
-            <div id="ncdumpText">
+    {# Add ncdump section #}
+    {% if cm.files.all %}
+        {# tab body for ncdump #}
+        <div id="ncdumpText">
 
-                {% for f in cm.files.all %}
-                    {% if f.resource_file.name|slice:"-3:" == 'txt'%}
-                        <div id="showNcdump">
-                            <h3 style="margin-top:40px"> NetCDF Header Info</h3>
-                            <p>{{ f.resource_file.name|slice:"33:" }}</p>
-                            {% if f.resource_file.size <= 5000000 %}
-                                <textarea readonly rows="15" style="margin-bottom:20px;border: 1px solid #ddd;width:100%">{{ f.resource_file.read}}</textarea>
-                            {% else %}
-                                <textarea readonly rows="5" style="margin-bottom:20px;border: 1px solid #ddd;width:100%">The size of the netCDF header information text file is too large for loading on the page.</textarea>
-                        {% endif %}
-                        </div>
+            {% for f in cm.files.all %}
+                {% if f.resource_file.name|slice:"-3:" == 'txt'%}
+                    <div id="showNcdump">
+                        <h3 style="margin-top:40px"> NetCDF Header Info</h3>
+                        <p>{{ f.resource_file.name|slice:"33:" }}</p>
+                        {% if f.resource_file.size <= 5000000 %}
+                            <textarea readonly rows="15" style="margin-bottom:20px;border: 1px solid #ddd;width:100%">{{ f.resource_file.read}}</textarea>
+                        {% else %}
+                            <textarea readonly rows="5" style="margin-bottom:20px;border: 1px solid #ddd;width:100%">The size of the netCDF header information text file is too large for loading on the page.</textarea>
+                    {% endif %}
+                    </div>
 {#                    {% else %}#}
 {#                        {% if page.perms.change %}#}
 {#                            <div id="createNcdump" style="margin-bottom: 25px">#}
@@ -177,17 +176,14 @@
 {#                                </a>#}
 {#                            </div>#}
 {#                        {% endif %}#}
-                    {% endif %}
-                {% endfor %}
+                {% endif %}
+            {% endfor %}
 
-            </div>
-        {% endif %}
+        </div>
+    {% endif %}
 
+{% endblock %} {# extra block ends here #}
 
-    {% endblock %} {# extended block ends here #}
-
-
-{%  endblock %}
 
 
 {% block extra_js %}
