--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -170,7 +170,7 @@
                         <div id="div_id_abstract" class="control-group">
                             <div class="controls"><textarea class="form-control input-sm textarea" cols="40"
                                                             id="id_abstract" name="abstract"
-                                                            rows="10">{{ cm.metadata.description|linebreaks }}</textarea></div>
+                                                            rows="10">{{ cm.metadata.description }}</textarea></div>
                         </div>
                         <div style="margin-top:10px">
                             <button type="button" class="btn btn-primary pull-right"
