--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -56,7 +56,7 @@
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
                 <option value="TimeSeriesResource">Time Series</option>
                 <option value="ToolResource">Application</option>
-                <option value="GeographicFeatureResource">Geographic Feature (Vector)</option>
+                <option value="GeographicFeatureResource">Geographic Feature (ESRI Shapefiles)</option>
 {#                <option value="InstResource">RHESSys Instance Resource</option> #}
             </select>
         </div>
