--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1802,7 +1802,7 @@ td.user-roles .caret {
     border-top: 4px solid #428bca;
 }
 
-td.user-actions > span {
+td.user-actions span {
     cursor: pointer;
     color: #999;
 }
@@ -1825,7 +1825,7 @@ td.user-actions > span:hover {
     width: 70%;
 }
 
-#manage-access form > div.dropdown {
+#manage-access form .dropdown {
     display:inline;
     border-radius:0;
 	float: left;
