[#471] On model resource, made website URL a link.

--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Website:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.program_website }}</div>
+                            <div class="col-sm-8"><a href="{{ mpmetadata.program_website }}" target="_blank">{{ mpmetadata.program_website }}</a></div>
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Release Notes:</strong></div>
