--- a/theme/templates/generic/includes/rating.html
+++ b/theme/templates/generic/includes/rating.html
@@ -8,7 +8,7 @@
     {% endif %}
 
     {% if not rated or request.user.is_authenticated %}
-        <form class="form-inline" role="form" method="post" action="/rating/" %}">
+        <form class="form-inline" role="form" method="post" action="/rating/">
         {% nevercache %}
             {% csrf_token %}
         {% endnevercache %}
